Bug 770617 - Always mark inactive CanvasLayers as being dirty. r=cjones